--- a/package.json
+++ b/package.json
@@ -12,22 +12,32 @@
     "dependencies": {
         "@babel/core": "^7.5.5",
         "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+        "@babel/polyfill": "^7.6.0",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
         "@babel/register": "^7.5.5",
         "@mdx-js/runtime": "^1.3.0",
         "ansimd": "^0.2.1",
         "blessed": "^0.1.81",
+        "boxen": "^4.1.0",
         "cardinal": "^2.1.1",
+        "chalk": "^3.0.0",
         "clipboardy": "^2.1.0",
+        "escape-string-regexp": "^2.0.0",
         "figlet": "^1.2.3",
+        "lodash": "^4.17.15",
+        "markdown-escape": "^1.0.2",
+        "markdown-escapes": "^1.0.3",
         "mdx.macro": "^0.2.9",
         "neo-blessed": "^0.2.0",
         "pty.js": "^0.3.1",
         "react": "^16.9.0",
         "react-blessed": "^0.6.1",
         "shelljs": "^0.8.3",
+        "term-img": "^4.1.0",
         "term.js": "0.0.7",
+        "terminal-image": "^0.2.0",
+        "terminal-link": "^2.0.0",
         "ws": "^7.1.2"
     },
     "devDependencies": {
