--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "deploy": "npx np"
     },
     "bin": {
-        "cmd-fun": "index.js"
+        "cmd-fun": "babel-node index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/cli": "^7.7.0",
         "@babel/core": "^7.5.5",
+        "@babel/node": "^7.7.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
         "@babel/polyfill": "^7.6.0",
         "@babel/preset-env": "^7.5.5",
