--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
         "@babel/register": "^7.5.5",
         "@mdx-js/runtime": "^1.3.0",
         "ansimd": "^0.2.1",
+        "babar": "^0.2.0",
         "blessed": "^0.1.81",
         "boxen": "^4.1.0",
         "cardinal": "^2.1.1",
         "chalk": "^3.0.0",
         "clipboardy": "^2.1.0",
+        "csv-parse": "^4.8.2",
+        "date-fns": "^2.7.0",
         "escape-string-regexp": "^2.0.0",
         "figlet": "^1.2.3",
         "lodash": "^4.17.15",
