Added color cycling and updated about page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
         "@babel/register": "^7.5.5",
+        "@darkobits/lolcatjs": "^3.1.3",
         "@mdx-js/runtime": "^1.3.0",
         "ansimd": "^0.2.1",
         "babar": "^0.2.0",
@@ -35,6 +36,7 @@
         "escape-string-regexp": "^2.0.0",
         "figlet": "^1.2.3",
         "lodash": "^4.17.15",
+        "lolcatjs": "^2.3.2",
         "markdown-escape": "^1.0.2",
         "markdown-escapes": "^1.0.3",
         "mdx.macro": "^0.2.9",
