--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@babel/core": "^7.5.5",
         "@babel/node": "^7.7.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+        "@babel/plugin-transform-modules-commonjs": "^7.7.0",
         "@babel/polyfill": "^7.6.0",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
